# OTA_Application

./: .gitignore  .gitmodules  README.md
app/: test  test.cpp
app/src/: AndroidManifest.xml  CMakeLists.txt  CMakeLists.txt.user.7db3632  CMakeLists.txt.user.ced7962  CMakeLists.txt.user.d002a38  CMakeLists.txt.user.d7a6786  Main.qml  data.cpp  data.hpp  main.cpp  update.cpp  update.hpp
app/src/android/: AndroidManifest.xml
app/src/content/: DrawPath.qml  Home.qml  Home.qml.autosave  Map.qml  Map.qml.autosave  Menu.qml  SafetyDetail.qml  SplashScreen.qml  Style.qml  TypeDescription.qml  Update.qml
docker/: Dockerfile  docker-compose.yml
docker/dockerFile/app/: Dockerfile
docker/dockerFile/server/: Dockerfile
gateway/: a.out  info_client.cpp  main.py
server/: main.py
src/app/: CMakeLists.txt  main.cpp
src/app/content/: Home.qml  SplashScreen.qml
src/tmp/: CMakeLists.txt  Main.qml
src/tmp/content/: Map.qml  Menu.qml  Style.qml
